# Snoop

./: Cargo.toml
app/: Cargo.toml
app/src/: main.rs  snoop.rs
assets/data/atlases/: Character.ron
assets/data/collision/: test.ron
assets/data/event/: test.ron
assets/data/levels/: test.ron
assets/data/sheets/: Character.ron
creator/: Cargo.toml
engine/: Cargo.toml
engine/src/: alarm.rs  camera.rs  codes.rs  draw.rs  gameloop.rs  sprites.rs
game/: Cargo.toml
game/src/: collisionmap.rs  eventmap.rs  level.rs  lib.rs  player.rs
src/: .snoop.rs.swp  engine.rs  main.rs  snoop.rs
src/engine/: .physics.rs.swp  alarm.rs  camera.rs  codes.rs  draw.rs  game.rs  input.rs  physics.rs  space.rs  sprites.rs
src/snoop/: .character.rs.swp  .collisionmap.rs.swp  character.rs  collisionmap.rs  escape.rs  eventmap.rs  level.rs  player.rs
