[package]
name = "snoop"
version = "0.1.0"
authors = ["basstabs <babsstabs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
ron = "0.6.4"
legion = "0.4.0"
sfml = 	"0.16.0"
parametrizer = "1.1.0"
