[package]
name = "engine"
version = "0.1.0"
authors = ["basstabs <babsstabs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.4"
sfml = "0.16"
serde = "1.0"
ron = "0.6.4"
parametrizer = "1.2.0"
